# Django_projects

./: README.md  image.md
crudop/employee/: Dockerfile  db.sqlite3  requirements.txt
crudop/employee/django-employee/: MANIFAST.in  setup.cfg  setup.py
crudop/employee/django-employee/django_employee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crudop/employee/django-employee/empapp/: views.py
crudop/employee/django-employee/empapp/templates/empapp/: detail.html  form_template.html  show.html
crudop/employee/django-employee1/: MANIFAST.in  README.rst  setup.cfg  setup.py
crudop/employee/django-employee1/empapp/: apps.py  forms.py  urls.py  views.py
crudop/employee/django-employee1/empapp/static/empapp/: style.css
crudop/employee/django-employee1/empapp/templates/empapp/: base.html  base1.html  edit.html  employee_form.html  index.html  login.html  signup.html
crudop/employee/empapp/: models.py  urls.py  views1.py
crudop/employee/employee/: settings.py  urls.py
crudop/env/: pip-selfcheck.json
crudop/env/Scripts/: activate  activate.bat  django-admin.py
practice/env/: pip-selfcheck.json
practice/env/Scripts/: activate  activate.bat  django-admin.py
practice/overi/: db.sqlite3  manage.py
practice/overi/blog/: admin.py  forms.py  models.py  urls.py  views.py
practice/overi/cadmin/: urls.py  views.py
practice/overi/overi/: helper.py  urls.py  (+2 more)
urlmapping/env/: pip-selfcheck.json
urlmapping/poll_master/: db.sqlite3
urlmapping/polls/: db.sqlite3
urlmapping/slugurl/: db.sqlite3  manage.py
urlmapping/urlmapprj/: db.sqlite3  manage.py
(+75 files in other folders)
