[metadata]
name = django-employee
author = JK
author_email = jk@gmail.com
maintainer = JK
maintainer_email = jk@gmail.com
description = "Jenkin Integration testing "
long_description = file:README.rst
long_description_content_type = 'text   '
url = http://localhost:8000
license = MIT
keywords = Jenkin Integration Demo
classifiers =
    Environment :: Web Environment
    Framework :: Django

[options]
include_package_data = true
packages = find: