[metadata]
name = django-employee
author = JK
author_email = Jyotikalashetti@gmail.com
maintainer = Jyoti
maintainer_email = Jyotikalashetti@gmail.com
description = "Jenkin Integration testing version changed to 1"
long_description = file:README.rst
long_description_content_type = 'text   '
url = http://localhost:8000
license = MIT
keywords = Jenkin Integration Demo
classifiers =
    Environment :: Web Environment
    Framework :: Django

# [options]
# include_package_data = true
# packages = find: